[package]
name = "rust-nmshd-goose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "^0.17"
tokio = "^1.12"
goose-eggs = "^0.5"
async-trait = "0.1.79"
serde = "1.0.197"
serde_json = "1.0.115"
